# devenv

./: to_system.sh
nvim-macos/: ginit.vim  init.vim
nvim-macos/lua/: setting.lua
nvim-macos/nvim/: lazy-lock.json  lazyvim.json
nvim-macos/nvim-bak20231217/: ginit.vim_
nvim-ubuntu/.config/fish/: config.fish
nvim-ubuntu/.config/nvim/: coc-settings.json  init.vim
nvim-windows/nvim/: ginit.vim  init.vim
nvim-windows2/: coc-settings.json  init.vim
nvim-windows2/plugin/rust-calculator/: init.lua
rust-calculator/: Cargo.toml
rust-calculator/src/: main.rs
vim-debian/: .vimrc
vim-msys2/: .bashrc  .vimrc
vim-ubuntu/: .vimrc
vim-windows/: README.md  _vimrc
