[package]
name = "rust-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
nvim-rs = { version = "0.6.0", features = ["use_tokio"] }
rmpv = "1.0.1"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "tracing", "time"] }
winapi = { version = "0.3.9", features = ["winerror"] }
